--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <section class="section">
           <div class="container">
             <header class="section-header">
-              <img src="icons/development.png" width="100" height="100">
+              <img src="https://raw.githubusercontent.com/CarlosG94/EqualHack/gh-pages/icons/Development.png" width="100" height="100">
               <h2 class="section-title">Preguntas Frecuentes</h2>
             </header>
             <div class="section-content">
