--- a/index.html
+++ b/index.html
@@ -89,23 +89,23 @@
         <section class="section section-inverse section-features">
           <div class="container">
             <header class="section-header">
-              <img src="icons/chemistry.png" width="100" height="100">
+              <img src="https://raw.githubusercontent.com/CarlosG94/EqualHack/gh-pages/icons/chemistry.png" width="100" height="100">
               <h2 class="section-title">¿Qu&eacute; va a pasar en el hackat&oacute;n?</h2>
             </header>
             <div class="section-content">
               <div class="row">
                 <div class="col-md-4 col-sm-6">
-                  <img src="icons/code.png" width="88" height="88">
+                  <img src="https://raw.githubusercontent.com/CarlosG94/EqualHack/gh-pages/icons/code.png" width="88" height="88">
                   <h3>Programar</h3>
                   <p>¡Programa hasta más no poder!</p>
                 </div>
                 <div class="col-md-4 col-sm-6" style="border-right: none;">
-                  <img src="icons/coffee.png" width="88" height="88">
+                  <img src="https://raw.githubusercontent.com/CarlosG94/EqualHack/gh-pages/icons/coffee.png" width="88" height="88">
                   <h3>No dormir</h3>
                   <p>"Sleep is for the weak"</p>
                 </div>
                 <div class="col-md-4 col-sm-6">
-                  <img src="icons/app.png" width="88" height="88">
+                  <img src="https://raw.githubusercontent.com/CarlosG94/EqualHack/gh-pages/icons/app.png" width="88" height="88">
                   <h3>Prototipo Terminado</h3>
                   <p>Presenta un prototipo que resuelva el reto planteado y alcanza la gloria máxima!</p>
                 </div>
@@ -117,7 +117,7 @@
         <section class="section section-pricing-table">
           <div class="container">
             <header class="section-header">
-              <img src="icons/cup.png" width="100" height="100">
+              <img src="https://raw.githubusercontent.com/CarlosG94/EqualHack/gh-pages/icons/cup.png" width="100" height="100">
               <h2 class="section-title">Premios</h2>
               <h2>Los premios se anunciarán durante el evento</h2>
             </header>
@@ -130,22 +130,22 @@
               
               <div class="col-lg-4 col-md-offset-1 col-md-5 col-md-offset-1 col-md-push-6">
                 <header class="section-header">
-                  <img src="icons/build.png" class="col-md-4 col-md-offset-4" width="100" height="100">
+                  <img src="https://raw.githubusercontent.com/CarlosG94/EqualHack/gh-pages/icons/build.png" class="col-md-4 col-md-offset-4" width="100" height="100">
                   <h2 class="section-title text-center">Temática</h2>
                 </header>
                 <div class="section-content text-center">
                   <p>Actualmente hay un gran problema en Guadalajara, </p>
                   <div class="row text-center" style="padding-top: 40px;">
                     <div class="col-md-4 col-md-offset-0 col-sm-3 col-sm-offset-4 col-xs-8">
-                      <img src="icons/protest.png" height="160" width="170">
+                      <img src="https://raw.githubusercontent.com/CarlosG94/EqualHack/gh-pages/icons/protest.png" height="160" width="170">
                       <h3><a href="http://www.proyectodiez.mx/jalisco/marcharan-a-favor-de-la-familia-natural" target="_blank">Link 1</a></h3>
                     </div>
                     <div class="col-md-4 col-sm-3 col-xs-6">
-                      <img src="icons/eye.png" height="160" width="170">
+                      <img src="https://raw.githubusercontent.com/CarlosG94/EqualHack/gh-pages/icons/eye.png" height="160" width="170">
                       <h3><a href="https://www.youtube.com/watch?v=mAF497n1Feg" target="_blank">Link 2</h3>
                     </div>
                     <div class="col-md-4 col-sm-3 col-xs-6">
-                      <img src="icons/dialogue.png" height="160" width="170">
+                      <img src="https://raw.githubusercontent.com/CarlosG94/EqualHack/gh-pages/icons/dialogue.png" height="160" width="170">
                       <h3><a href="https://www.youtube.com/watch?v=Cp92OZO_gPM" target="_blank">Link 3</a></h3>
                     </div>
                   </div>
@@ -168,44 +168,12 @@
       <section class="section section-inverse section-contact">
           <div class="container">
             <header class="section-header">
-              <img src="icons/airplane.png" width="100" height="100">
+              <img src="https://raw.githubusercontent.com/CarlosG94/EqualHack/gh-pages/icons/airplane.png" width="100" height="100">
               <h2 class="section-title">Cont&aacute;ctanos</h2>
               <div class="section-description">Envíanos un <a href="mailto:carlos@hacktheworld.io" target="_blank">correo</a> con cualquier duda que tengas y con gusto te respondemos.</div>
             </header>
           </div>
         </section>
-
-      <footer class="site-footer">
-        <div class="container">
-        <p>Copyright © 2015 Hack the World, Inc. All rights reserved.</p>
-        </div>
-      </footer>
-
-
-
-      <!-- Project Modal -->
-      <div class="project-modal modal fade" id="project-modal" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <button type="button" class="close" data-dismiss="modal"><i class="fa fa-times"></i><span class="sr-only">Close</span></button>
-            <div class="modal-body">
-              <article class="single-project">
-                <div class="project-thumbnail"><img src="http://placehold.it/600x300" /></div>
-                <h3 class="project-title">Project title</h3>
-                <div class="project-meta">
-                  <span><i class="fa fa-clock-o"></i> 25<sup>th</sup> July, 2014</span>
-                  <span><i class="fa fa-building-o"></i> Client: Google</span>
-                  <span><i class="fa fa-briefcase"></i> Work: Web Design</span>
-                </div>
-                <div class="project-description">
-                  <p class="prueba"></p>
-                  <p>Pellentesque urna turpis, placerat sed aliquet in, fringilla at nisi. Donec nec dui enim. Cras neque turpis, volutpat nec dignissim id, cursus porttitor ligula. Maecenas congue dui vitae urna rhoncus, sed bibendum purus pulvinar. Donec euismod tristique fermentum. Suspendisse vitae odio.</p>
-                </div>
-              </article>
-            </div>
-          </div>
-        </div>
-      </div>
       
     </div>
     <script src="https://maps.googleapis.com/maps/api/js"></script>
