--- a/index.html
+++ b/index.html
@@ -189,10 +189,13 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel">Encuentranos en el el stand</h4>
+            <h4 class="modal-title" id="myModalLabel">Encuéntranos en el el stand</h4>
           </div>
           <div class="modal-body">
             <h1>De ZACATECAS<h1>
+              <p>Síguenos en las redes sociales<p>
+                <p style="font-size:30px;"><a href="https://www.facebook.com/pages/Campus-Party-Comunidad-Zacatecas-CPMX/365296627003793" target="_blank">Comunidad CPMX ZAC</a></p>
+                <p style="font-size:30px;"><a href="https://twitter.com/zapopanlab" target="_blank" >ZapopanLab</a></p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
