--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
           <div class="container">
             <header class="section-header">
               <div class="site-logo"><img src="images/logoequal.png"></div>
-              <h1 class="section-title">Equal Hacks<br>23 de Julio Campus Party</h1>
+              <h1 class="section-title">Equal Hacks<br>24 de Julio Campus Party</h1>
+              <h2 class="section-title">Stand Zacatecas</h2>
             </header>
             <div class="section-content">
               <div class="cta row">
@@ -61,7 +62,7 @@
                   </div>
                   <div class="feature-block">
                     <h3><span>¿A qu&eacute; hora?</span></h3>
-                    <p>A las ######</p>
+                    <p>A las 12:00pm (medio día)</p>
                   </div>
                 </div>
 
@@ -189,7 +190,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel">Encuéntranos en el el stand</h4>
+            <h4 class="modal-title" id="myModalLabel">Encuéntranos a las 12:00pm en el stand</h4>
           </div>
           <div class="modal-body">
             <h1>De ZACATECAS<h1>
