--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                   </div>
                   <div class="feature-block">
                     <h3><span>¿C&oacute;mo llego?</span></h3>
-                    <p>El escenatio Zacatecas se encuentra ubicado a la entrada de la Zona de Workshops.</p>
+                    <p>El escenario Zacatecas se encuentra ubicado a la entrada de la Zona de Workshops</p>
                   </div>
                 </div>
               </div>
@@ -109,7 +109,7 @@
                 <div class="col-md-4 col-sm-6">
                   <img src="https://raw.githubusercontent.com/CarlosG94/EqualHack/gh-pages/icons/App.png" width="88" height="88">
                   <h3>Prototipo Terminado</h3>
-                  <p>Presenta un prototipo que resuelva el reto planteado y alcanza la gloria máxima!</p>
+                  <p>¡Presenta un prototipo que resuelva el reto planteado y alcanza la gloria máxima!</p>
                 </div>
               </div>
             </div>
