--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="Website template for hackathons">
+    <meta name="description" content="Hackathon de la diversidad sexual">
     <meta name="author" content="Carlos Gutierrez and Alex Blanco">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -62,7 +62,7 @@
                   </div>
                   <div class="feature-block">
                     <h3><span>¿A qu&eacute; hora?</span></h3>
-                    <p>A las 12:00pm (medio día)</p>
+                    <p>A las 1:00pm </p>
                   </div>
                 </div>
 
