--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 </header>
                 <div class="section-content text-center">
                   <p>Actualmente hay un gran problema de desconocimiento y las distintas comunidades no deben de ser juzgadas por su identidad u orientación. Queremos que a través de este hackatón podamos tener un impacto positivo en la comunidad, ya que la conexión de distintos puntos de vista enriquece a todos.</p>
-                  <a href="https://docs.google.com/a/hacktheworld.io/document/d/1kY9grT2806PgiAaxgVs7_SATToePs9NxtI9LIuJHFrA/edit?usp=sharing" target="_blank"><h1> Revisa los retos! </h1></a>
+                  <a href="https://docs.google.com/document/d/1nZAROV3sveVFOGh0lWSx8pecADxONPmbyE9JZuKN-ic/edit?usp=sharing" target="_blank"><h1> Revisa los retos! </h1></a>
                   <div class="row text-center" style="padding-top: 40px;">
                     <div class="col-md-4 col-md-offset-0 col-sm-3 col-sm-offset-4 col-xs-8">
                       <img src="https://raw.githubusercontent.com/CarlosG94/EqualHack/gh-pages/icons/Protest.png" height="160" width="170">
